--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -1,5 +1,6 @@
 @import "./Base/reset";
 @import "./Base/typography";
+@import url(https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans);
 
 
 
