--- a/Client/SCSS/Base/_typography.scss
+++ b/Client/SCSS/Base/_typography.scss
@@ -3,3 +3,18 @@
     src: url("../../Fonts/Flame-Regular.woff") format("woff");
     font-weight: 400;
 }
+
+@font-face {
+    font-family: "Flame-RegularSans";
+    src: url("../../Fonts/Flame-Bold.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Flame Sans";
+    src: url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.eot");
+    src: url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.svg#Flame Sans")format("svg");
+}
