--- a/Client/SCSS/Layout/_.navbar.scss
+++ b/Client/SCSS/Layout/_.navbar.scss
@@ -1,84 +1,119 @@
 header {
   @include container();
-  height: 56px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 104px;
   background-color: rgb(245, 235, 220);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1.41px;
   .navbar {
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .burgermenu {
-      text-decoration: none;
-      width: 24px;
-      height: 24px;
-      img {
+    flex-direction: column;
+    .top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 50px;
+      .burgermenu {
+        text-decoration: none;
         width: 24px;
         height: 24px;
-      }
-    }
-
-    .logo {
-      text-decoration: none;
-      width: 38px;
-      height: 38px;
-      img {
-        // position: absolute;
-        // left: 740px;
-        width: 38px;
-        height: 38px;
-      }
-    }
-    .buttons {
-      display: flex;
-      gap: 10px;
-      .account {
-        text-decoration: none;
-        width: 115px;
-        height: 34px;
-
-        button {
-          background-color: rgb(167, 27, 0);
-          border-radius: 9999px;
-          border: none;
-          width: 115px;
-          height: 34px;
-          color: white;
-          line-height: 1.5em;
-          font-size: 15px;
-          font-weight: bold;
-          font-family: Flame-Regular;
-          // background-color: transparent;
-          // border: none;
+        img {
+          width: 24px;
+          height: 24px;
         }
       }
 
-      .basket {
+      .logo {
         text-decoration: none;
-        width: 84.06px;
-        height: 34px;
-        button {
+        width: 38px;
+        height: 38px;
+        img {
+          // position: absolute;
+          // left: 740px;
+          width: 38px;
+          height: 38px;
+        }
+      }
+      .buttons {
+        display: flex;
+        gap: 10px;
+        .account {
+          text-decoration: none;
+          width: 115px;
+          height: 34px;
+
+          button {
+            background-color: rgb(167, 27, 0);
+            border-radius: 9999px;
+            border: none;
+            width: 115px;
+            height: 34px;
+            color: white;
+            font-size: 12px;
+            font-family: "Flame Sans";
+            // background-color: transparent;
+            // border: none;
+          }
+        }
+
+        .basket {
+          text-decoration: none;
+          width: 84.06px;
+          height: 34px;
           display: flex;
           justify-content: center;
           align-items: center;
-          gap: 10px;
-          background-color: rgb(80, 35, 20);
-          border-radius: 9999px;
-          border: none;
-          color: white;
-          width: 84.06px;
-          height: 34px;
-          line-height: 1.5em;
-          font-size: 15px;
-          font-weight: bold;
-          font-family: Flame-Regular;
+          button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            background-color: rgb(80, 35, 20);
+            border-radius: 9999px;
+            border: none;
+            color: white;
+            width: 84.06px;
+            height: 34px;
+            font-size: 12px;
+            font-family: "Flame Sans";
 
-          img {
-            width: 15px;
-            height: 15px;
-            
+            img {
+              width: 15px;
+              height: 15px;
+            }
+          }
+        }
+      }
+    }
+
+    .bottom {
+      display: flex;
+      align-items: center;
+      height: 48px;
+
+      a {
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        img {
+          width: 20px;
+          height: 20px;
+        }
+        span {
+          &:nth-child(2) {
+            font-size: 16px;
+            font-family: "Flame Sans";
+            font-weight: bold;
+            line-height: 24px;
+            color: rgb(80, 35, 20);
+          }
+
+          &:nth-child(3) {
+            color: rgb(80, 35, 20);
+            font-family: "Flame Sans";
+            text-decoration: underline;
           }
         }
       }
