Order section complated

--- a/Client/SCSS/Base/_typography.scss
+++ b/Client/SCSS/Base/_typography.scss
@@ -18,3 +18,13 @@
     url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.ttf")format("truetype"),
     url("https://db.onlinewebfonts.com/t/29eee6d957e73039264c9de9fd949d20.svg#Flame Sans")format("svg");
 }
+
+@font-face {
+    font-family: "Flame Bold";
+    src: url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.eot");
+    src: url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.svg#Flame Bold")format("svg");
+}
