--- a/Client/SCSS/Utils/_variables.scss
+++ b/Client/SCSS/Utils/_variables.scss
@@ -1,3 +1,6 @@
-$desktop-container-width: 1344px;
-$tablet-container-width: 768px;
+//1050px
+$desktop-container-width: 1200px;
+//690
+$tablet-container-width: 767px;
+//375
 $mobile-container-width: 375px;
