--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -1,11 +1,12 @@
 @import "./Base/reset";
 @import "./Base/typography";
-@import url(https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans);
-
+// @import url(https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans);
+@import url(https://db.onlinewebfonts.com/c/565a681be0eb6f1d92c6bc57c629ea35?family=Flame+Bold);
 
 
 
 @import "./Utils/mixins";
+@import "./Utils/variables";
 
 
 
