--- a/Client/SCSS/Pages/_Home.scss
+++ b/Client/SCSS/Pages/_Home.scss
@@ -172,7 +172,7 @@ body {
     height: 515px;
     background-color: white;
     margin-bottom: 8px;
-    
+
     @include for-size(mobile) {
       width: 100%;
       height: 315px;
@@ -196,10 +196,11 @@ body {
     .bottom {
       padding: 20px;
       display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 220px;
+      flex-direction: column;
+      justify-content: space-evenly;
+      height: 220px;
       @include for-size(mobile) {
+        height: 120px;
         padding: 10px;
       }
       .info {
@@ -241,13 +242,12 @@ body {
           line-height: 20px;
           color: rgb(80, 35, 20);
           cursor: pointer;
-          @include for-size(mobile){
+          @include for-size(mobile) {
             font-size: 10px;
-          margin-top: 4px;
-          margin-bottom: 4px;
-          text-decoration-line: underline;
-          line-height: 10px;
-
+            margin-top: 4px;
+            margin-bottom: 4px;
+            text-decoration-line: underline;
+            line-height: 10px;
           }
         }
       }
@@ -280,6 +280,132 @@ body {
             font-size: 6px;
             font-weight: bold;
           }
+        }
+      }
+    }
+  }
+}
+
+.ads {
+  background-color: rgba(0, 0, 0, 0.04);
+  height: 450px;
+  margin-top: 200px;
+  @include for-size(tablet) {
+    margin-top: 100px;
+  }
+  @include for-size(mobile) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+
+    margin-top: 55px;
+  }
+
+  .ad {
+    @include container();
+    display: flex;
+
+    .left {
+      padding-right: 10%;
+      padding-left: 10%;
+      padding-bottom: 40px;
+
+      @include for-size(mobile) {
+        display: none;
+      }
+      @include for-size(tablet) {
+        padding-right: 5%;
+        padding-left: 5%;
+        padding-bottom: 20px;
+      }
+      img {
+        position: relative;
+        top: -40px;
+        width: 300px;
+      }
+    }
+
+    .right {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 20px;
+      @include for-size(tablet) {
+        gap: 10px;
+      }
+      @include for-size(mobile) {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
+
+      h4 {
+        font-size: 48px;
+        color: rgb(80, 35, 20);
+        font-family: "Flame Bold";
+
+        @include for-size(tablet) {
+          font-size: 35px;
+          color: rgb(80, 35, 20);
+          font-family: "Flame Bold";
+        }
+
+        @include for-size(mobile) {
+          font-size: 20px;
+        }
+      }
+
+      .link {
+        display: flex;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        gap: 20px;
+
+        @include for-size(tablet) {
+          margin-top: 10px;
+          margin-bottom: 5px;
+        }
+
+        .appstore {
+          img {
+            width: 200px;
+            height: 70px;
+            @include for-size(tablet) {
+              width: 150px;
+              height: 45px;
+            }
+          }
+        }
+
+        .playstore {
+          img {
+            width: 200px;
+            height: 70px;
+            border-radius: 10px;
+            @include for-size(tablet) {
+              width: 150px;
+              height: 45px;
+            }
+          }
+        }
+      }
+
+      span {
+        font-family: "Flame Sans";
+        margin-top: 32px;
+        font-size: 14px;
+        line-height: 24px;
+        color: rgb(80, 35, 20);
+        text-align: left;
+
+        @include for-size(tablet) {
+          font-family: "Flame Sans";
+          margin-top: 22px;
+          font-size: 10px;
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-align: left;
         }
       }
     }
