--- a/Client/SCSS/main.css
+++ b/Client/SCSS/main.css
@@ -681,3 +681,40 @@ body {
     text-align: left;
   }
 }
+
+.terms .term {
+  background-color: rgb(80, 35, 20);
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-right: 16px;
+  padding-left: 16px;
+  text-align: center;
+}
+.terms .term span {
+  width: 1200px;
+  margin: auto;
+  font-size: 12px;
+  font-family: "Flame Sans";
+  line-height: 24px;
+  color: rgb(245, 235, 220);
+}
+@media screen and (max-width: 1200px) {
+  .terms .term span {
+    width: 767px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .terms .term span {
+    width: 375px;
+    margin: auto;
+  }
+}
+.terms .term span a {
+  color: rgb(245, 235, 220);
+  font-size: 12px;
+  text-decoration-line: underline;
+  font-family: "Flame Sans";
+  line-height: 24px;
+  cursor: pointer;
+}
