Sign In/Sign Up pages completed

--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -22,3 +22,6 @@
 
 @import "./Pages/Home";
 @import "./Pages/Location";
+@import "./Pages/Delivery";
+@import "./Pages/SignUp";
+@import "./Pages/Menu";
