--- a/Client/SCSS/Pages/_Location.scss
+++ b/Client/SCSS/Pages/_Location.scss
@@ -112,21 +112,29 @@
   .top {
     margin-top: 5px;
     display: flex;
-    button {
+    a{
       width: 100%;
-      height: 48px;
-      background-color: transparent;
-      border: none;
-      font-family: "Flame Sans";
-      font-size: 16px;
-      line-height: 24px;
-      color: rgb(80, 35, 20);
+      
+      button {
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 24px;
+        color: rgb(80, 35, 20);
+        width: 100%;
+        height: 48px;
+        background-color: transparent;
+        border: none;
+        font-family: "Flame Sans";
+      }
+        .nearby{
+          color: red;
+          border-bottom: 3px solid red;
+          font-weight: bold;
+        }
+      
     }
 
-    button.active{
-
-      border-bottom: 5px solid rgb(214, 35, 0)
-    }
+  
   }
 
   .bottom {
